# fastapi-tutorial

./: README.md  pyproject.toml
app/: run.py
app/crud/: base.py
app/models/: __init__.py  recipe.py  recipes.py  session.py  user.py
app/routers/: __init__.py  hello_world.py  recipes.py
app/schema/: __init__.py  recipe.py
app/templates/: index.html
